--- a/auth/package.json
+++ b/auth/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "jest --watchAll --no-cache",
     "start": "ts-node-dev --poll src/index.ts"
   },
   "keywords": [],
