--- a/auth/package.json
+++ b/auth/package.json
@@ -8,7 +8,7 @@
     "start": "ts-node-dev --poll src/index.ts"
   },
   "jest": {
-    "preset": "ts=jest",
+    "preset": "ts-jest",
     "testEnvironment": "node",
     "setupFilesAfterEnv": [
       "./src/test/setup.ts"
