--- a/products/package.json
+++ b/products/package.json
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@mwproducts/common": "0.0.4",
+    "@mwproducts/common": "^0.0.5",
     "@types/cookie-session": "^2.0.39",
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.3.9",
