--- a/infra/k8s/payments-depl.yaml
+++ b/infra/k8s/payments-depl.yaml
@@ -16,6 +16,10 @@ spec:
         - name: payments
           image: mwells1286/payments
           env:
+            - name: STRIPE_KEY
+              valueFrom:
+                secretKeyRef:
+                  key: STRIPE_KEY
             - name: MONGO_URI
               value: 'mongodb://payments-mongo-srv:27017/payments'
             - name: JWT_KEY
