--- a/infra/k8s/payments-depl.yaml
+++ b/infra/k8s/payments-depl.yaml
@@ -19,6 +19,7 @@ spec:
             - name: STRIPE_KEY
               valueFrom:
                 secretKeyRef:
+                  name: stripe-secret
                   key: STRIPE_KEY
             - name: MONGO_URI
               value: 'mongodb://payments-mongo-srv:27017/payments'
