--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.1",
     "react-bulma-components": "^3.2.0",
     "react-dom": "^16.13.1",
+    "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^6.0.4"
   }
 }
