--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "bulmaswatch": "^0.8.1",
     "next": "^9.4.0",
     "react": "^16.13.1",
     "react-bulma-components": "^3.2.0",
     "react-dom": "^16.13.1",
+    "react-scripts-sass": "^1.1.3",
     "react-stripe-checkout": "^2.6.3",
-    "react-toastify": "^6.0.4"
+    "react-toastify": "^6.0.4",
+    "sass": "^1.26.5"
   }
 }
