--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-bulma-components": "^3.2.0",
     "react-dom": "^16.13.1",
     "react-scripts-sass": "^1.1.3",
+    "react-spring": "^8.0.27",
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^6.0.4",
     "sass": "^1.26.5"
