--- a/auth/package.json
+++ b/auth/package.json
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@mwproducts/common": "0.0.18",
+    "@mwproducts/common": "^0.0.23",
     "@types/cookie-session": "^2.0.39",
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.3.9",
@@ -38,6 +38,6 @@
     "jest": "^26.0.1",
     "mongodb-memory-server": "^6.6.0",
     "supertest": "^4.0.2",
-    "ts-jest": "^25.5.1"
+    "ts-jest": "^26.5.1"
   }
 }
